test/cases/compile_errors/main_missing_name.zig
pub fn (main) void {}

// error
// backend=stage2
// target=native
// output_mode=Exe
//
// :1:5: error: missing function name
